Add hide captions overlay button option

--- a/Chromium/options.html
+++ b/Chromium/options.html
@@ -16,6 +16,7 @@
 
     <label>Overlay Options</label><br><br>
     <label><input type="checkbox" id="hideAutoPlaySwitchCheckBox">Hide AutoPlay Switch</label><br>
+    <label><input type="checkbox" id="hideCaptionsButtonCheckBox">Hide Captions Button</label><br>
     <label><input type="checkbox" id="hideInfoCardButtonCheckBox">Hide Info Card Button</label>
 
     <br><br><hr><br>
