Add hide related videos and hide comments option

--- a/Chromium/options.html
+++ b/Chromium/options.html
@@ -32,6 +32,12 @@
     <label><input type="checkbox" id="hideNextButtonCheckBox">Hide Next Button</label>
 
     <br><br><hr><br>
+
+    <label>Other Options</label><br><br>
+    <label><input type="checkbox" id="hideRelatedVideosSectionCheckBox">Hide Related Videos</label><br>
+    <label><input type="checkbox" id="hideCommentsSectionCheckBox">Hide Comments</label>
+
+    <br><br><hr><br>
     
     <div id="status"></div>
     <button id="save">Save</button>
