Add beta adblock option

--- a/Chromium/options.html
+++ b/Chromium/options.html
@@ -9,7 +9,13 @@
     <title>YouTube Reborn Options</title>
 </head>
 <body>
-    <br><label>Video Options</label><br><br>
+    <br><label>Global Options</label><br><br>
+    <label><input type="checkbox" id="blockAdsCheckBox">Block Ads (Beta)</label><br><br>
+    <label>Please know adblock is still beta so it may not work, I would recommend ublock origin or adguard for guaranteed full adblocking</label>
+    
+    <br><br><hr><br>
+    
+    <label>Video Options</label><br><br>
     <label><input type="checkbox" id="enablePictureInPictureButtonCheckBox">Enable Picture In Picture</label><br>
     <label><input type="checkbox" id="disableAutoPlayCheckBox">Disable AutoPlay</label><br>
     <label><input type="checkbox" id="disableCaptionsCheckBox">Disable Captions</label>
