Add option to hide heatwave and hide youtube logo

--- a/Chromium/options.html
+++ b/Chromium/options.html
@@ -18,12 +18,14 @@
     <label>Video Options</label><br><br>
     <label><input type="checkbox" id="enablePictureInPictureButtonCheckBox">Enable Picture In Picture</label><br>
     <label><input type="checkbox" id="disableAutoPlayCheckBox">Disable AutoPlay</label><br>
-    <label><input type="checkbox" id="disableCaptionsCheckBox">Disable Captions</label>
+    <label><input type="checkbox" id="disableCaptionsCheckBox">Disable Captions</label><br>
+    <label><input type="checkbox" id="disableHeatwaveCheckBox">Disable Heatwave</label>
     
     <br><br><hr><br>
     
     <label>NavBar Options</label><br><br>
     <label><input type="checkbox" id="hideVoiceSearchButtonCheckBox">Hide Voice Search Button</label><br>
+    <label><input type="checkbox" id="hideYouTubeLogoCheckBox">Hide YouTube Logo</label><br>
     <label><input type="checkbox" id="hideCountrySymbolNextToLogoCheckBox">Hide Country Symbol Next To Logo</label>
 
     <br><br><hr><br>
