Add adblock message to options

--- a/Chromium/options.html
+++ b/Chromium/options.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <br><label>Global Options</label><br><br>
-    <label><input type="checkbox" id="blockAdsCheckBox">Block Ads</label>
+    <label><input type="checkbox" id="blockAdsCheckBox">Block Ads</label><br><br>
+    <label>Please know adblock may not work due to manifest v3, I would recommend <a target="_blank" href="https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm">uBlock Origin</a> or <a target="_blank" href="https://chrome.google.com/webstore/detail/adguard-adblocker/bgnkhhnnamicmpeenaelnjfhikgbkllg">AdGuard</a> for full adblocking</label>
     
     <br><br><hr><br>
     
