--- a/Chromium/options.html
+++ b/Chromium/options.html
@@ -7,6 +7,8 @@
     <meta name="author" content="Lillie">
 
     <title>YouTube Reborn Options</title>
+
+    <link href="options.css" rel="stylesheet">
 </head>
 <body>
     <br><label>Global Options</label><br><br>
