Finish player bar colour option, bump version

--- a/Chromium/options/options.html
+++ b/Chromium/options/options.html
@@ -65,6 +65,11 @@
 
     <br><br><hr><br>
 
+    <label>Colour Options</label><br><br>
+    <input type="checkbox" id="playerBarColourCheckBox"><input type="color" id="playerBarColour"><label style="padding-left:5px;">Player Bar</label>
+
+    <br><br><hr><br>
+
     <label>Other Options</label><br><br>
     <label><input type="checkbox" id="hideRelatedVideosSectionCheckBox">Hide Related Videos</label><br>
     <label><input type="checkbox" id="hideCommentsSectionCheckBox">Hide Comments</label>
